--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.5",
+    "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-splash-screen": "~0.27.4",
@@ -35,6 +36,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-shadow-2": "^7.0.8",
+    "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10"
   },
