feat: add toast

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-screens": "3.31.1",
     "react-native-shadow-2": "^7.0.8",
     "react-native-svg": "^15.3.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10"
   },
